- 
    
Bug
 - 
    Resolution: Done
 - 
    
P2: Important
 - 
    Qt Creator 4.0.0
 
In previous versions, I could add -DVARIABLE=value to the command line to invoke cmake. I don't see that option any more. The "Build Settings" page only allows changing pre-existing variable values, not adding new variables.
My project needs CMAKE_PREFIX_PATH defined to build properly
- is duplicated by
 - 
                    
QTCREATORBUG-16249 Unable to add new settings or arguments to CMake projects
-         
     - Closed
 
 -         
 
- replaces
 - 
                    
QTCREATORBUG-16294 CMake configuration values window doesn't allow for adding new values
-         
     - Closed
 
 -